--- a/index.html
+++ b/index.html
@@ -108,6 +108,28 @@
                 <li>Щочетверга – з 9:30 до 12:00 (ранкова група) або</li>
                 <li>з 18:30 до 21:00 (вечірня група)</li>
             </ul>
+            <section class="course-details">
+    <h2>🔹 Що таке курс MBSR?</h2>
+    <p>🌿 <strong>MBSR (Mindfulness-Based Stress Reduction)</strong> – міжнародно визнана програма, яка допомагає...</p>
+
+    <h3>🌟 Що ви отримаєте:</h3>
+    <ul>
+        <li>Зменшення стресу та тривоги</li>
+        <li>Покращення сну та здоров'я</li>
+        <li>Розвиток усвідомленості у повсякденному житті</li>
+    </ul>
+
+    <h3>📅 Розклад занять:</h3>
+    <ul>
+        <li><strong>Зустріч 1:</strong> "Що таке майндфулнес?"</li>
+        <li><strong>Зустріч 2:</strong> "Сприйняття та реакції"</li>
+        <li><strong>Зустріч 3:</strong> "Дихання і рух"</li>
+        <li><strong>Зустріч 4:</strong> "Стресова реакція"</li>
+        <li><strong>Зустріч 5:</strong> "Робота зі стресом"</li>
+        <li><strong>Зустріч 6:</strong> "Майндфулнес у відносинах"</li>
+        <li><strong>Зустріч 7:</strong> "Як подбати про себе"</li>
+        <li><strong>Зустріч 8:</strong> "Життя в усвідомленості"</li>
+    </ul>
             </p>
             <p><strong>🤗 Груповий формат:</strong> до 12 осіб</p>
             <p><strong>💰 Вартість:</strong> 9000 грн (знижки для ранніх реєстрацій)</p>
