--- a/index.html
+++ b/index.html
@@ -109,15 +109,6 @@
                 <li>з 18:30 до 21:00 (вечірня група)</li>
             </ul>
             <section class="course-details">
-    <h2>🔹 Що таке курс MBSR?</h2>
-    <p>🌿 <strong>MBSR (Mindfulness-Based Stress Reduction)</strong> – міжнародно визнана програма, яка допомагає...</p>
-
-    <h3>🌟 Що ви отримаєте:</h3>
-    <ul>
-        <li>Зменшення стресу та тривоги</li>
-        <li>Покращення сну та здоров'я</li>
-        <li>Розвиток усвідомленості у повсякденному житті</li>
-    </ul>
 
     <h3>📅 Розклад занять:</h3>
     <ul>
@@ -139,7 +130,11 @@
         </section>
 
     </div>
-
+<section class="download">
+    <h2>📄 Завантажити детальний опис курсу</h2>
+    <p>Щоб отримати повний опис курсу MBSR, завантажте документ за посиланням:</p>
+    <a href="https://drive.google.com/file/d/129QDTw9RAOxEidCd8JEPrrQd4wRg4eJg/view?usp=drivesdk" class="cta-button" target="_blank">📥 Завантажити PDF</a>
+</section>
     <footer>
         <p>&copy; 2025 Kyiv Mental Health Center – Mindfulness Space</p>
     </footer>
