--- a/index.html
+++ b/index.html
@@ -76,11 +76,11 @@
         <section>
             <h2>Засновники</h2>
              <div class="founder">
-        <img src="images/yevhen.jpg" alt="Гречаник Євген">
+        <img src="images/Yevhen.jpg" alt="Гречаник Євген">
             <p><strong>👨‍⚕️ Гречаник Євген</strong> – психолог, психотерапевт, сертифікований вчитель майндфулнес, програми MBSR/MBCT.<br>
             ✅ Дійсний член Української майндфулнес асоціації (УМА).</p>
 <div class="founder">
-        <img src="images/antonina.jpg" alt="Оксанич Антоніна">
+        <img src="images/Antonina.jpg" alt="Оксанич Антоніна">
             <p><strong>👩‍⚕️ Оксанич Антоніна</strong> – психологиня, психотерапевтка, супервізорка, сертифікована вчителька майндфулнес, програми MBSR.<br>
             ✅ Дійсна членкиня Української майндфулнес асоціації (УМА).</p>
         </section>
