--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         <section>
             <h2>Засновники</h2>
         <div class="founder">
-    <img src="images/yevhen.jpg" alt="Гречаник Євген">
+    <img src="images/Yevhen.jpg.png" alt="Гречаник Євген">
     <div class="founder-text">
         <p><strong>👨‍⚕️ Гречаник Євген</strong> – психолог, психотерапевт, сертифікований вчитель майндфулнес, програми MBSR/MBCT.<br>
         ✅ Дійсний член Української майндфулнес асоціації (УМА).</p>
@@ -84,7 +84,7 @@
 </div>
 
 <div class="founder">
-    <img src="images/antonina.jpg" alt="Оксанич Антоніна">
+    <img src="images/Antonina.jpg.png" alt="Оксанич Антоніна">
     <div class="founder-text">
         <p><strong>👩‍⚕️ Оксанич Антоніна</strong> – психологиня, психотерапевтка, супервізорка, сертифікована вчителька майндфулнес, програми MBSR.<br>
         ✅ Дійсна членкиня Української майндфулнес асоціації (УМА).</p>
