--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@
         ✅ Дійсна членкиня Української майндфулнес асоціації (УМА).</p>
     </div>
 </div>
+</div>
 
         <section class="event">
             <h2>📅 Деталі події: Онлайн-семінар</h2>
