--- a/index.html
+++ b/index.html
@@ -77,20 +77,20 @@
             <h2>Засновники</h2>
         <section>
     <div class="founder">
-        <img src="images/Yevhen.jpg.png" alt="Гречаник Євген">
-        <div class="founder-text">
-            <p><strong>👨‍⚕️ Гречаник Євген</strong> – психолог, психотерапевт, сертифікований вчитель майндфулнес, програми MBSR/MBCT.</p>
-            <p>✅ Дійсний член Української майндфулнес асоціації (УМА).</p>
-        </div>
+    <img src="images/Yevhen.jpg.png" alt="Євген Гречаник">
+    <div class="founder-text">
+        <strong>👨‍⚕️ Гречаник Євген</strong> – психолог, психотерапевт, сертифікований вчитель майндфулнес, програми MBSR/MBCT.<br>
+        ✅ Дійсний член Української майндфулнес асоціації (УМА).
     </div>
+</div>
 
-    <div class="founder">
-        <img src="images/Antonina.jpg.png" alt="Оксанич Антоніна">
-        <div class="founder-text">
-            <p><strong>👩‍⚕️ Оксанич Антоніна</strong> – психологиня, психотерапевтка, супервізорка, сертифікована вчителька майндфулнес, програми MBSR.</p>
-            <p>✅ Дійсна членкиня Української майндфулнес асоціації (УМА).</p>
-        </div>
+<div class="founder">
+    <img src="images/Antonina.jpg.png" alt="Антоніна Оксанич">
+    <div class="founder-text">
+        <strong>👩‍⚕️ Оксанич Антоніна</strong> – психологиня, психотерапевтка, супервізорка, сертифікована вчителька майндфулнес, програми MBSR.<br>
+        ✅ Дійсна членкиня Української майндфулнес асоціації (УМА).
     </div>
+</div>
 </section>
 
         <section class="event">
