--- a/index.html
+++ b/index.html
@@ -94,12 +94,49 @@
 </section>
 
         <section class="event">
-            <h2>📅 Деталі події: Онлайн-семінар</h2>
-            <p><strong>🕒 Коли:</strong> 22 березня з 11:00 до 12:30 за Київським часом ⏳</p>
-            <p><strong>💻 Формат:</strong> Онлайн (Zoom) 🌍</p>
-            <p><strong>💰 Участь:</strong> Безкоштовна</p>
-            <p><strong>📌 Як взяти участь?</strong> Заповніть анкету за посиланням:</p>
-            <a href="https://forms.gle/jPLP4uKuyzzCD7Um6" class="cta-button">Реєстрація</a>
+            <div class="event-card">
+    <h3>🧘‍♀️ Майндфулнес у кожному моменті: Шлях до внутрішнього спокою та усвідомленості</h3>
+    <p>🌿 Сучасний світ сповнений швидкості, інформаційного шуму та нескінченного потоку завдань. У цьому ритмі ми часто забуваємо про найголовніше — про себе, своє внутрішнє відчуття спокою та рівноваги.</p>
+
+    <p>Запрошуємо вас на семінар, де ми разом дослідимо, як практики усвідомленості допомагають знизити рівень стресу, покращити концентрацію та відчути глибший зв’язок із собою та навколишнім світом. 🌏</p>
+
+    <p>Цей семінар поєднає теорію та практику, щоб ви не лише дізналися про майндфулнес, але й змогли відчути його силу у своєму житті. ✨</p>
+
+    <h4>📝 План семінару:</h4>
+    <ul>
+        <li><strong>1️⃣ Що таке майндфулнес?</strong><br>
+            – Основні принципи усвідомленості 🧠<br>
+            – Історія та походження практики 📖<br>
+            – Чим майндфулнес відрізняється від інших методик саморозвитку? 🤔
+        </li>
+        <li><strong>2️⃣ Як практики майндфулнес впливають на нервову систему?</strong><br>
+            – Наукові дослідження та їхні висновки 🔬<br>
+            – Вплив на мозок, емоційний стан та рівень стресу 😌<br>
+            – Зміни в мисленні та реакціях на життєві події 🔄
+        </li>
+        <li><strong>3️⃣ Навіщо людині усвідомленість?</strong><br>
+            – Як майндфулнес допомагає приймати зважені рішення ⚖️<br>
+            – Усвідомленість у стосунках, роботі, творчості ❤️<br>
+            – Шлях до більш гармонійного та радісного життя 😌
+        </li>
+        <li><strong>4️⃣ Практична частина: медитація усвідомленості</strong><br>
+            – Коротке налаштування на практику 🧘‍♂️<br>
+            – Проведення медитації 🔄<br>
+            – Обговорення відчуттів та досвіду учасників ✨
+        </li>
+    </ul>
+
+    <h4>📅 Деталі події:</h4>
+    <p>🕒 <strong>Коли:</strong> 22 березня з 11:00 до 12:30 за Київським часом ⏳</p>
+    <p>💻 <strong>Формат:</strong> Онлайн (Zoom) 🌍</p>
+    <p>💰 <strong>Участь:</strong> благодійна, за донат на допомогу українським дітям. Всі кошти будуть передані у благодійний фонд.</p>
+
+    <h4>📌 Як взяти участь?</h4>
+    <p>Для реєстрації заповніть, будь ласка, анкету у формі:</p>
+    <a href="https://forms.gle/b7ni5K3KjG9h6paF6" class="button">Реєстрація</a>
+
+    <p>📩 Чекаємо вас на семінарі! Разом створимо простір спокою, усвідомленості та гармонії. 🌿✨</p>
+</div>
         </section>
 
         <section class="course">
@@ -110,7 +147,7 @@
                 <li>Поліпшити сон та загальне самопочуття</li>
                 <li>Розвинути усвідомленість та покращити відносини</li>
             </ul>
-            <p><strong>🗓 Початок курсу:</strong> 17 квітня 2025 року</p>
+            <p><strong>🗓 Початок курсу:</strong> 24 квітня 2025 року</p>
             <p><strong>⏰ Графік зустрічей:</strong> 
             <ul>
                 <li>Щочетверга – з 9:30 до 12:00 (ранкова група) або</li>
