--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <style>
         body <header>
     <div class="logo-container">
-        <img src="images/logo.png" alt="Mindfulness Space Logo">
+        <img src="images/logo.png.jpg" alt="Mindfulness Space Logo">
     </div>
 </header>
         {
