--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <style>
         body <header>
     <div class="logo-container">
-        <img src="images/logo.png.jpg" alt="Mindfulness Space Logo">
+        <img src="images/logo.png" alt="Mindfulness Space Logo">
     </div>
 </header>
         {
@@ -82,7 +82,7 @@
             <h2>Засновники</h2>
         <section>
     <div class="founder">
-    <img src="images/Yevhen.jpg.png" alt="Євген Гречаник">
+    <img src="images/Yevhen.png" alt="Євген Гречаник">
     <div class="founder-text">
         <strong>👨‍⚕️ Гречаник Євген</strong> – психолог, психотерапевт, сертифікований вчитель майндфулнес, програми MBSR/MBCT.<br>
         ✅ Дійсний член Української майндфулнес асоціації (УМА).
@@ -90,7 +90,7 @@
 </div>
 
 <div class="founder">
-    <img src="images/Antonina.jpg.png" alt="Антоніна Оксанич">
+    <img src="images/Antonina.png" alt="Антоніна Оксанич">
     <div class="founder-text">
         <strong>👩‍⚕️ Оксанич Антоніна</strong> – психологиня, психотерапевтка, супервізорка, сертифікована вчителька майндфулнес, програми MBSR.<br>
         ✅ Дійсна членкиня Української майндфулнес асоціації (УМА).
