--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 </div>
 
 <div class="founder">
-    <img src="images/Antonina.png" alt="Антоніна Оксанич">
+    <img src="https://raw.githubusercontent.com/github.com/Mindfulness-Kyiv/mindfulness/blob/main/images/Antonina.png" alt="Антоніна Оксанич">
     <div class="founder-text">
         <strong>👩‍⚕️ Оксанич Антоніна</strong> – психологиня, психотерапевтка, супервізорка, сертифікована вчителька майндфулнес, програми MBSR.<br>
         ✅ Дійсна членкиня Української майндфулнес асоціації (УМА).
