--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kyiv Mental Health Center – Mindfulness Space</title>
     <style>
-        body <header>
+        body 
+        <header>
     <div class="logo-container">
         <img src="images/logo.png" alt="Mindfulness Space Logo">
     </div>
