--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         body 
         <header>
     <div class="logo-container">
-        <img src="images/logo.png" alt="Mindfulness Space Logo">
+        <img src="images/logo.png.jpg" alt="Mindfulness Space Logo">
     </div>
 </header>
         {
@@ -91,7 +91,7 @@
 </div>
 
 <div class="founder">
-    <img src="images/Antonina.png" alt="Антоніна Оксанич">
+    <img src="images/Antonina.png.jpg" alt="Антоніна Оксанич">
     <div class="founder-text">
         <strong>👩‍⚕️ Оксанич Антоніна</strong> – психологиня, психотерапевтка, супервізорка, сертифікована вчителька майндфулнес, програми MBSR.<br>
         ✅ Дійсна членкиня Української майндфулнес асоціації (УМА).
