--- a/index.html
+++ b/index.html
@@ -7,11 +7,67 @@
     <title>Kyiv Mental Health Center – Mindfulness Space</title>
     <style>
         body 
-        <header>
+        <!DOCTYPE html>
+<html lang="uk">
+<head>
+    <link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Kyiv Mental Health Center – Mindfulness Space</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            line-height: 1.6;
+            margin: 0;
+            padding: 0;
+            background-color: #f8f8f8;
+            color: #333;
+        }
+
+        header {
+            background: #2c3e50;
+            color: white;
+            padding: 20px;
+            text-align: center;
+            position: relative;
+        }
+
+        .logo-container {
+            text-align: center;
+            padding: 10px 0;
+        }
+
+        .logo-container img {
+            max-width: 150px; /* Логотип не буде надто великим */
+            height: auto;
+        }
+    </style>
+</head>
+<body>
+
+    <!-- ЛОГОТИП ВГОРІ САЙТУ -->
     <div class="logo-container">
         <img src="images/logo.png.jpg" alt="Mindfulness Space Logo">
     </div>
-</header>
+
+    <header>
+        <h1>Kyiv Mental Health Center – Mindfulness Space</h1>
+        <p>Популяризація майндфулнес в Україні</p>
+    </header>
+
+    <div class="container">
+        <section>
+            <h2>Про нас</h2>
+            <p><strong>Kyiv Mental Health Center – Mindfulness Space</strong> – це простір усвідомленості, що допомагає людям покращити ментальне здоров’я через практики майндфулнес.</p>
+        </section>
+    </div>
+
+    <footer>
+        <p>&copy; 2025 Kyiv Mental Health Center – Mindfulness Space</p>
+    </footer>
+
+</body>
+</html>
         {
             font-family: Arial, sans-serif;
             line-height: 1.6;
