--- a/index.html
+++ b/index.html
@@ -1,20 +1,12 @@
 <!DOCTYPE html>
 <html lang="uk">
 <head>
-    <link rel="stylesheet" href="styles.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kyiv Mental Health Center – Mindfulness Space</title>
-    <style>
-        body 
-        <!DOCTYPE html>
-<html lang="uk">
-<head>
     <link rel="stylesheet" href="styles.css">
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kyiv Mental Health Center – Mindfulness Space</title>
     <style>
+        /* Основні стилі */
         body {
             font-family: Arial, sans-serif;
             line-height: 1.6;
@@ -24,64 +16,26 @@
             color: #333;
         }
 
-        header {
-            background: #2c3e50;
-            color: white;
-            padding: 20px;
-            text-align: center;
-            position: relative;
-        }
-
+        /* Логотип зверху */
         .logo-container {
             text-align: center;
-            padding: 10px 0;
+            padding: 20px 0;
         }
 
         .logo-container img {
-            max-width: 150px; /* Логотип не буде надто великим */
+            max-width: 150px;
             height: auto;
         }
-    </style>
-</head>
-<body>
 
-    <!-- ЛОГОТИП ВГОРІ САЙТУ -->
-    <div class="logo-container">
-        <img src="images/logo.png.jpg" alt="Mindfulness Space Logo">
-    </div>
-
-    <header>
-        <h1>Kyiv Mental Health Center – Mindfulness Space</h1>
-        <p>Популяризація майндфулнес в Україні</p>
-    </header>
-
-    <div class="container">
-        <section>
-            <h2>Про нас</h2>
-            <p><strong>Kyiv Mental Health Center – Mindfulness Space</strong> – це простір усвідомленості, що допомагає людям покращити ментальне здоров’я через практики майндфулнес.</p>
-        </section>
-    </div>
-
-    <footer>
-        <p>&copy; 2025 Kyiv Mental Health Center – Mindfulness Space</p>
-    </footer>
-
-</body>
-</html>
-        {
-            font-family: Arial, sans-serif;
-            line-height: 1.6;
-            margin: 0;
-            padding: 0;
-            background-color: #f8f8f8;
-            color: #333;
-        }
+        /* Заголовок сайту */
         header {
             background: #2c3e50;
             color: white;
             padding: 20px;
             text-align: center;
         }
+
+        /* Основний контейнер */
         .container {
             width: 80%;
             margin: auto;
@@ -91,37 +45,18 @@
             border-radius: 5px;
             box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
         }
+
         h1, h2 {
             color: #2c3e50;
-        }
-        .event, .course {
-            background: #ecf0f1;
-            padding: 15px;
-            border-radius: 5px;
-            margin-bottom: 20px;
-        }
-        .cta-button {
-            display: inline-block;
-            padding: 10px 15px;
-            background: #3498db;
-            color: white;
-            text-decoration: none;
-            border-radius: 5px;
-            font-weight: bold;
-        }
-        .cta-button:hover {
-            background: #2980b9;
-        }
-        footer {
-            text-align: center;
-            padding: 20px;
-            background: #2c3e50;
-            color: white;
-            margin-top: 20px;
         }
     </style>
 </head>
 <body>
+
+    <!-- Логотип у самому верху -->
+    <div class="logo-container">
+        <img src="images/logo.png" alt="Mindfulness Space Logo">
+    </div>
 
     <header>
         <h1>Kyiv Mental Health Center – Mindfulness Space</h1>
@@ -129,13 +64,10 @@
     </header>
 
     <div class="container">
-
         <section>
             <h2>Про нас</h2>
             <p><strong>Kyiv Mental Health Center – Mindfulness Space</strong> – це простір усвідомленості, що допомагає людям покращити ментальне здоров’я через практики майндфулнес.</p>
         </section>
-
-        <section>
             <h2>Засновники</h2>
         <section>
     <div class="founder">
