--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
     <!-- Логотип у самому верху -->
     <div class="logo-container">
-        <img src="images/logo.png" alt="Mindfulness Space Logo">
+        <img src="images/logo.png.jpg" alt="Mindfulness Space Logo">
     </div>
 
     <header>
