--- a/index.html
+++ b/index.html
@@ -58,10 +58,13 @@
         <img src="images/logo.png.jpg" alt="Mindfulness Space Logo">
     </div>
 
-    <header>
-        <h1>Kyiv Mental Health Center – Mindfulness Space</h1>
-        <p>Популяризація майндфулнес в Україні</p>
-    </header>
+   <header>
+    <div class="logo-container">
+        <img src="images/logo.png" alt="Mindfulness Space Logo">
+    </div>
+    <h1>Kyiv Mental Health Center – Mindfulness Space</h1>
+    <p>Популяризація майндфулнес в Україні</p>
+</header>
 
     <div class="container">
         <section>
